Working on facets styling. Overall, I'm happy. But I'm having bleedover problems from the accordion. I can't seem to be able to style the accordion individuall via the available-facets scss or the project view component scss. Anything I add is being ignored, even when I add class names that I can reference. I'm assuming this is an angular issue. If you all have any ideas, I'd be grateful for some help.

--- a/client/src/app/project/project-view/project-view.component.scss
+++ b/client/src/app/project/project-view/project-view.component.scss
@@ -113,3 +113,7 @@ a {
 .active>md-icon {
   color: $icon-hover;
 }
+
+div.accordion-title {
+  border: none !important;
+}
